--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
                 </div>
                 <!-- Masthead Subheading-->
                 <p class="pre-wrap masthead-subheading font-weight-light mb-0">Консультации - Разработка - Архитектура<br/>мультиоблака</p>
+                <br />
+                <p class="pre-wrap masthead-subheading font-weight-light mb-0 text-white" style="background-color: white;"><a class="text-warning" href="http://phredpython.de">You speak english? Phred Python too!</a></p>
             </div>
         </header>
         <section class="page-section portfolio" id="portfolio">
